<resources>
    <string name="app_name">PlanPalMobile</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_todoLeft">Events</string>
    <string name="title_todoRight">Perfil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_tienes_una_cuenta_picha_aqui_y_n_registrate">¿No tienes cuenta? ¡Haz clic aquí para registrarte!</string>
    <string name="bienvenido_a_planpal">Bienvenido a PlanPal</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña.</string>
    <string name="introduce_tu_correo">Introduce tu correo.</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta_haz_clic_aqu_para_iniciar_sesi_n">Ya tienes cuenta? ¡Haz clic aquí para Iniciar Sesión!</string>
    <string name="crea_tu_cuenta_en_planpal">Crea tu cuenta en PlanPal</string>
    <string name="descripci_n">Escribe sobre ti oh sobre tu empresa \n(Web oficial, información de interes etc…)</string>
    <string name="campo_de_informaci_n_adicional_opcional">Campo de Información Adicional (Opcional).</string>
    <string name="dia_nn">día nn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_event">Name Event</string>
    <string name="moth_88_2222_8_88_pm">Moth 88, 2222 – 8:88 PM</string>
    <string name="estado">Estado</string>
    <string name="esto_es_un_ejemplo_de_una_descripci_n">Esto es un ejemplo de una descripción…</string>
    <string name="perfil">Perfil</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="correo">Correo:</string>
    <string name="descripcion_perfil">Descripción:</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="error_al_cargar_datos">Error al cargar datos.</string>
    <string name="usuario_no_autenticado">Usuario no autenticado.</string>
    <string name="correo_alert">"Correo: "</string>
    <string name="descripci_n_alert">"Descripción: "</string>
    <string name="crea_un_nuevo_componente">Crea un nuevo componente</string>
    <string name="create_new_event">create new event</string>
    <string name="inicio">Inicio</string>
    <string name="titulo_del_evento">Titulo del evento</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="fin">Fin</string>
    <string name="cancelar">cancelar</string>
    <string name="crear">crear</string>
    <string name="_31_may">31 MAY</string>
    <string name="_99_99">99:99</string>
    <string name="descripcion">Descripcion</string>
    <string name="nueva_cita">Nueva cita</string>
    <string name="_20_03_2025">20/03/2025</string>
    <string name="_15_50">15:50</string>
    <string name="exampleDate">2025/03/23 at 18:00</string>
    <string name="todo">TODO</string>
    <string name="no_events">no events\n</string>
    <string name="calendar_icon">calendar icon\n</string>
    <string name="event_title">Event Title</string>
    <string name="may_19_vie_18_30_to_may_19_vie_23_30">May 19,vie 18:30 to May 19,vie 23:30</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="ver_m_s">Ver más</string>
    <string name="aqu_va_una_descripci_n_muy_larga_que_podr_a_ocupar_muchas_l_neas_si_no_se_controla_correctamente_este_texto_debe_poder_expandirse_y_comprimirse">Aquí va una descripción muy larga que podría ocupar muchas líneas si no se controla correctamente. Este texto debe poder expandirse y comprimirse.</string>
    <string name="reservar_una_cita">Reservar una cita</string>
    <string name="eliminar">Eliminar</string>
    <string name="_12_may_2023_15_30">12 MAY, 2023 15:30</string>
    <string name="reservado_por_name_user">Reservado por: Name_User</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="correo_usuario_correo_com">Correo: usuario@correo.com</string>
    <string name="descripci_n_informaci_n_adicional_sobre_el_usuario">Descripción: Información adicional sobre el usuario.</string>
    <string name="introduce_tu_nombre_opcional">Introduce tu nombre (Opcional)</string>
    <string name="c_digo">Código</string>
    <string name="editar">Editar</string>
    <string name="personal">personal</string>
    <string name="hoy">HOY</string>
    <string name="t_tulo_del_evento">Título del Evento</string>
    <string name="ver_detalles">Ver detalles</string>
</resources>