<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.planpalmobile.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_event_manager"
        android:name="com.example.planpalmobile.ui.eventmanager.EventManagerFragment"
        android:label="@string/title_todoLeft"
        tools:layout="@layout/fragment_event_manager" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.planpalmobile.ui.perfil.PerfilFragment"
        android:label="@string/title_todoRight"
        tools:layout="@layout/fragment_perfil" />
</navigation>