<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE9FD">

    <!-- Encabezado con nombre -->
    <TextView
        android:id="@+id/tituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/mainBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Imagen de perfil genérica -->
    <ImageView
        android:id="@+id/imagenPerfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/imgperfil"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tituloPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/foto_de_perfil"
        android:padding="8dp" />

    <!-- Nombre de usuario -->
    <TextView
        android:id="@+id/nombreUsuarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imagenPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Correo -->
    <TextView
        android:id="@+id/correoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="16sp"
        android:textColor="#555555"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/nombreUsuarioTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/descripcionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_perfil"
        android:textSize="16sp"
        android:textColor="#555555"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/correoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/mainBlue"
        android:text="@string/cerrar_sesi_n"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>

