<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calendar.ItemEventFragment"
    android:layout_gravity="center_horizontal"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/tvNameEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_event"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moth_88_2222_8_88_pm"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameEvent" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:backgroundTint="@color/bar_color"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvEstateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/estado"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>







</FrameLayout>